[jambotron] creata struttura generale

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <!-- /container bottom -->
   </header>
 
+
+  <!-- jumbotron -->
+  <div class="jumbotron debug">
+    <div class="container h-100 debug">
+      <div class="row row-cols-xl-3 row-cols-sm-1 h-100 debug">
+        <div class="col debug"></div>
+      </div>
+    </div>
+  </div>
+  <!-- /jumbotron -->
+
+
   <main></main>
   <footer></footer>
 
