--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/utilities.css">
@@ -14,24 +15,110 @@
 </head>
 <body>
   
-  <header class="debug">
+  <header class="">
 
-    <!-- container top  -->
-    <div class="container-fluid em-header-top debug">
-      <div class="row row-cols-1 h-100 debug">
-        <div class="col d-flex justify-content-end h-100 debug"> a </div>
+    <!-- header top  -->
+    <div class="container-fluid em-header-top">
+      <div class="row row-cols-1 h-100">
+        <div class="col d-flex justify-content-end align-items-center h-100">
+          <img class="h-50" src="img/sony_logo.svg" alt="">
+        </div>
       </div>
     </div>
-    <!-- /container top  -->
+    <!-- /header top  -->
 
-    <!-- container bottom -->
-    <div class="container-fluid em-header-bottom debug">
-      <div class="row debug h-100 ">
-        <div class="col-xl-8 col-sm-6 h-100 debug">a</div>
-        <div class="col-xl-4 col-sm-6 h-100 debug">b</div>
+    <!-- header bottom -->
+    <div class="container-fluid em-header-bottom">
+      <div class="row h-100 ">
+        <div class="col-6 col-sm-6 col-md-8 h-100">
+
+          <!-- NAV SINISTRO -->
+          <nav class="d-flex h-100">
+
+            <!-- UL LOGO -->
+            <ul class="d-flex align-items-center m-0 ps-0">
+              <li class="pe-4">
+                <a href="#">
+                  <img src="img/play_logo.svg" alt="">
+                </a>
+              </li>
+            </ul>
+            <!-- /UL LOGO -->
+
+            <ul class="d-none d-lg-flex w-100 align-items-center m-0 ps-0">
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Giochi</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Hardware</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Servizi</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Novità</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Fai acquisti</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a class="d-flex align-items-center" href="#">
+                  <span>Supporto</span>
+                  <i class="fa-solid fa-chevron-down ps-2"></i>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- /NAV SINISTRO -->
+
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 h-100">
+        <!-- NAV DESTRO -->
+          <nav class="d-none d-lg-flex h-100">
+            <ul class="d-flex w-100 align-items-center justify-content-end m-0 ps-0">
+              <li class="pe-4">
+                <a href="#">
+                  <span>My Playstation</span>
+                  <i class="fa-solid fa-chevron-down ps-1"></i>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a href="#">
+                  <button type="button" class="btn btn-dark em-btn">Accedi</button>
+                </a>
+              </li>
+              <li class="pe-4">
+                <a href="#">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- /NAV DESTRO -->
+          <div class="d-flex d-lg-none h-100 justify-content-end align-items-center">
+            <i class="fa-solid fa-bars cursor"></i>
+          </div>
+
+
+        </div>
       </div>
     </div>
-    <!-- /container bottom -->
+    <!-- /header bottom -->
   </header>
 
 
@@ -45,8 +132,30 @@
   </div>
   <!-- /jumbotron -->
 
+  <main>
 
-  <main></main>
+    <!-- CAROUSEL -->
+    <section id="carousel" class="debug">
+      <div class="container">
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 h-100">
+          <div class="col h-100 debug">a</div>
+          <div class="col h-100 debug">a</div>
+          <div class="col h-100 debug">a</div>
+          <div class="col h-100 debug">a</div>
+          <div class="col h-100 debug">a</div>
+          <div class="col h-100 debug">a</div>
+        </div>
+      </div>
+    </section>
+    <!-- CAROUSEL -->
+  
+    <!-- playhasnolimits -->
+    <section id="playhasnolimits">
+      
+    </section>
+    <!-- /playhasnolimits -->
+
+  </main>
   <footer></footer>
 
 </body>
