[jumbotron] jumbotron stilizzato

--- a/index.html
+++ b/index.html
@@ -123,17 +123,22 @@
 
 
   <!-- jumbotron -->
-  <div class="jumbotron debug">
-    <div class="container h-100 debug">
-      <div class="row row-cols-xl-3 row-cols-sm-1 h-100 debug">
-        <div class="col debug"></div>
+  <section id="jumbotron" class="">
+    <div class="container-fluid em-container-fluid h-100">
+      <div class="container h-100 ">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 align-items-end ">
+          <div class="col h-50 text-white">
+            <img class="pb-2" src="img/returnal-hero-banner-logo.png" alt="">
+            <h2 class="pb-4">Rompi il cerchio</h2>
+            <p class="fw-bold ">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo espolosivo thriller fantascientifico, disponibile in esclusiva PS5.</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
   <!-- /jumbotron -->
 
   <main>
-
     <!-- CAROUSEL -->
     <section id="carousel" class="debug">
       <div class="container">
