[jumbotron] aggiunto bottone "acquista ora"

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
           <div class="col h-50 text-white">
             <img class="pb-2" src="img/returnal-hero-banner-logo.png" alt="">
             <h2 class="pb-4">Rompi il cerchio</h2>
-            <p class="fw-bold ">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo espolosivo thriller fantascientifico, disponibile in esclusiva PS5.</p>
+            <p class="fw-bold pb-2">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo espolosivo thriller fantascientifico, disponibile in esclusiva PS5.</p>
+            <button type="button" class="btn btn-danger em-btn fw-bold">Acquista ora</button>
           </div>
         </div>
       </div>
