section CAROUSEL e PLAYHASNOLIMITS stilizzate

--- a/index.html
+++ b/index.html
@@ -141,25 +141,61 @@
 
   <main>
     <!-- CAROUSEL -->
-    <section id="carousel" class="debug">
+    <section id="carousel" class="pt-5 pb-5">
       <div class="container">
         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 h-100">
-          <div class="col h-100 debug">a</div>
-          <div class="col h-100 debug">a</div>
-          <div class="col h-100 debug">a</div>
-          <div class="col h-100 debug">a</div>
-          <div class="col h-100 debug">a</div>
-          <div class="col h-100 debug">a</div>
+          <div class="col em-col h-100">
+            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col em-col h-100">
+            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col em-col h-100">
+            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col em-col h-100">
+            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col em-col h-100">
+            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col em-col h-100">
+            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>      
         </div>
       </div>
     </section>
     <!-- CAROUSEL -->
   
     <!-- playhasnolimits -->
-    <section id="playhasnolimits">
-      
+    <section id="playhasnolimits" class="pt-5 pb-5">
+      <div class="container-fluid d-flex flex-column align-items-center">
+        <span class="blue">PLAY HAS NO LIMITS</span>
+        <h1 class="pb-2">Ecco la PlayStation 5</h1>
+        <p class="p-description">Tuffati in nuove possiblità di gioco compleatamente inaspettate</p>
+      </div>
     </section>
     <!-- /playhasnolimits -->
+
+    <!-- PLAYSTATION5 -->
+    <section id="playstation5" class="pt-5 pb-5 debug">
+      <div class="container">
+        <div class="row row-cols-2 row-cols-lg-1 debug">
+          <div class="col debug h-100">
+            Console PlayStation 5
+          </div>
+          <div class="col debug h-100">b</div>
+        </div>
+        <div class="row row-cols-3 row-cols-md-5 ">
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+        </div>
+      </div>
+    </section>
+    <!-- /PLAYSTATION5 -->
 
   </main>
   <footer></footer>
