--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- PLAYSTATION5 -->
     <section id="playstation5" class="pt-5 pb-5 debug">
       <div class="container">
-        <div class="row row-cols-2 row-cols-lg-1 debug">
+        <div class="row row-cols-1 row-cols-md-2 debug">
           <div class="col debug h-100">
             Console PlayStation 5
           </div>
