stilizzata sezione "itakestwo" e eliminata altezza fissa jumbotron

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <section id="jumbotron" class="">
     <div class="container-fluid em-container-fluid h-100">
       <div class="container h-100 ">
-        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 align-items-end ">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 align-items-end pb-5 em-row">
           <div class="col h-50 text-white">
             <img class="pb-2" src="img/returnal-hero-banner-logo.png" alt="">
             <h2 class="pb-4">Rompi il cerchio</h2>
@@ -181,10 +181,10 @@
     <section id="playstation5" class="pt-5 pb-5 debug">
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2 debug">
-          <div class="col debug h-100">
-            Console PlayStation 5
+          <div class="col col-md-5 debug h-100">
+            <h1>Console PlayStation 5</h1>
           </div>
-          <div class="col debug h-100">b</div>
+          <div class="col col-md-7 debug h-100">b</div>
         </div>
         <div class="row row-cols-3 row-cols-md-5 ">
           <div class="col debug">a</div>
@@ -197,6 +197,23 @@
     </section>
     <!-- /PLAYSTATION5 -->
 
+
+    <!-- it takes two -->
+    <section id="itakestwo" class="debug">
+      <div class="container-fluid em-container-fluid h-100">
+        <div class="container h-100 ">
+          <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 pb-5">
+            <div class="col h-50 text-white debug">
+              <img class="pt-5 pb-5" src="img/it-takes-two-logo.png" alt="">
+              <h2 class="pb-4">Un'avventura cooperativa selvaggia ti attende</h2>
+              <p class="fw-bold pb-2">Trova un amico e partite insimee per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+              <button type="button" class="btn btn-danger em-btn fw-bold">Acquista ora</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /it takes two -->
   </main>
   <footer></footer>
 
