--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 
   <!-- jumbotron -->
   <section id="jumbotron" class="">
-    <div class="container-fluid em-container-fluid h-100">
-      <div class="container h-100 ">
-        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 align-items-end pb-5 em-row">
+    <div class="container-fluid em-container-fluid">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 align-items-end pb-5 em-row">
           <div class="col h-50 text-white">
             <img class="pb-2" src="img/returnal-hero-banner-logo.png" alt="">
             <h2 class="pb-4">Rompi il cerchio</h2>
@@ -143,23 +143,23 @@
     <!-- CAROUSEL -->
     <section id="carousel" class="pt-5 pb-5">
       <div class="container">
-        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 h-100">
-          <div class="col em-col h-100">
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
+          <div class="col em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col h-100">
+          <div class="col em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
-          <div class="col em-col h-100">
+          <div class="col em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col h-100">
+          <div class="col em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
-          <div class="col em-col h-100">
+          <div class="col em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col h-100">
+          <div class="col em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>      
         </div>
@@ -199,11 +199,11 @@
 
 
     <!-- it takes two -->
-    <section id="itakestwo" class="debug">
-      <div class="container-fluid em-container-fluid h-100">
-        <div class="container h-100 ">
-          <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 h-100 pb-5">
-            <div class="col h-50 text-white debug">
+    <section id="itakestwo" class="">
+      <div class="container-fluid em-container-fluid">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 pb-5">
+            <div class="col h-50 text-white">
               <img class="pt-5 pb-5" src="img/it-takes-two-logo.png" alt="">
               <h2 class="pb-4">Un'avventura cooperativa selvaggia ti attende</h2>
               <p class="fw-bold pb-2">Trova un amico e partite insimee per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
@@ -214,6 +214,49 @@
       </div>
     </section>
     <!-- /it takes two -->
+
+    <!-- nuove uscite -->
+    <section id="nuove-uscite" class="pt-5 pb-5 debug">
+      <div class="container debug">
+        <div class="row debug">
+          <div class="col debug">a</div>
+        </div>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 debug">
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+          <div class="col debug">a</div>
+        </div>
+      </div>
+    </section>
+    <!-- /nuove uscite -->
+
+    <!-- PLAYSTATION4 -->
+    <section id="playstation4">
+      <div class="container-fluid">
+        <div class="row debug">
+          <div class="col d-flex flex-column align-items-center debug">
+            <span class="blue">PLAY HAS NO LIMITS</span>
+            <h1 class="pb-2">Ecco la PlayStation 5</h1>
+            <p class="p-description">Tuffati in nuove possiblità di gioco compleatamente inaspettate</p>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 pb-5 debug">
+            <div class="col debug">a</div>
+            <div class="col debug">b</div>
+            <div class="col debug">c</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- PLAYSTATION4 -->
   </main>
   <footer></footer>
 
