--- a/index.html
+++ b/index.html
@@ -257,6 +257,15 @@
       </div>
     </section>
     <!-- PLAYSTATION4 -->
+
+    <section id="playstationplus" class="pt-5 pb-5 debug">
+      <div class="container debug">
+        <div class="row row-cols-1 row-cols-md-2 debug">
+          <div class="col debug">a</div>
+          <div class="col d-none d-md-flex debug">b</div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 
