struttura generale section "social" creata

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
     </section>
     <!-- PLAYSTATION4 -->
 
+    <!-- playstation plus -->
     <section id="playstationplus" class="pt-5 pb-5 debug">
       <div class="container debug">
         <div class="row row-cols-1 row-cols-md-2 debug">
@@ -266,6 +267,54 @@
         </div>
       </div>
     </section>
+    <!-- playstation plus -->
+    
+    <!-- sconti-->
+    <section id="sconti">
+      <div class="container-fluid">
+        <div class="row debug">
+          <div class="col d-flex flex-column align-items-center debug">
+            <span class="blue">PLAY HAS NO LIMITS</span>
+            <h1 class="pb-2">Ecco la PlayStation 5</h1>
+            <p class="p-description">Tuffati in nuove possiblità di gioco compleatamente inaspettate</p>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 pb-5 debug">
+            <div class="col debug">a</div>
+            <div class="col debug">b</div>
+            <div class="col debug">c</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- sconti-->
+
+
+    <!-- playstation now -->
+    <section id="playstation-now" class="pt-5 pb-5 debug">
+      <div class="container debug">
+        <div class="row row-cols-1 row-cols-md-2 debug">
+          <div class="col debug">a</div>
+          <div class="col d-none d-md-flex debug">b</div>
+        </div>
+      </div>
+    </section>
+    <!-- playstation now -->
+
+    <!-- social -->
+    <section id="social" class="pt-5 pb-5 debug">
+      <div class="em-container debug">
+        <div class="container-fluid debug">
+          <div class="row">a</div>
+          <div class="row row-cols-2 row-cols-sm-4">
+            <div class="col debug">a</div>
+            <div class="col debug">b</div>
+            <div class="col debug">c</div>
+            <div class="col debug">e</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- social -->
   </main>
   <footer></footer>
 
