--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     </section>
     <!-- playstation now -->
     
-    
+
     <!-- social -->
     <section id="social" class="pt-5 pb-5 debug">
       <div class="em-container debug">
@@ -317,7 +317,26 @@
     </section>
     <!-- social -->
   </main>
-  <footer></footer>
+
+  <footer>
+    <section id="copyright" class="pt-5 pb-5 debug">
+      <div class="row row-cols-1 row-cols-lg-2 pb-5 debug">
+        <div class="col debug">a</div>
+        <div class="col debug">
+          <div class="container debug">
+            <div class="row row-cols-1 row-cols-md-3 debug">
+              <div class="col debug">link1</div>
+              <div class="col debug">link1</div>
+              <div class="col debug">link1</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row debug">
+        <div class="col debug">c</div>
+      </div>
+    </section>
+  </footer>
 
 </body>
 </html>
