aggiunta classe "active" (linea blu inferiore negli accessori della section "playstation5") , gestita dimensione degli accessori sotto i 768px

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- /playhasnolimits -->
 
     <!-- PLAYSTATION5 -->
-    <section id="playstation5" class="pt-2 pb-4">
+    <section id="playstation5" class="pb-4">
       <div class="container">
         <div class="d-flex align-items-center row row-cols-1 row-cols-md-2 pb-4">
           <div class="col col-md-5 h-100">
@@ -192,25 +192,25 @@
           </div>
         </div>
         <div class="row row-cols-3 row-cols-md-5" id="accessories-row">
-          <div class="col d-flex flex-column align-items-center hover-opacity">
+          <div class="col d-flex flex-column align-items-center hover-opacity active">
             <img class="accessories pb-3" src="img/playstation-5-thumb.png" alt="">
-            <p class="fs-6 text-center">Console PS5</p>
+            <p class="fs-6 text-center d-none d-md-inline-block">Console PS5</p>
           </div>
           <div class="col d-flex flex-column align-items-center hover-opacity">
             <img class="accessories pb-3" src="img/joypad-thumb.png" alt="">
-            <p class="fs-6 text-center">Controller wireless DualSense &trade;</p>
+            <p class="fs-6 text-center d-none d-md-inline-block">Controller wireless DualSense &trade;</p>
           </div>
           <div class="col d-flex flex-column align-items-center hover-opacity">
             <img class="accessories pb-3" src="img/headset-thumb.png" alt="">
-            <p class="fs-6 text-center">Cuffie wireless con microfono PULSE 3 &trade;</p>
+            <p class="fs-6 text-center d-none d-md-inline-block">Cuffie wireless con microfono PULSE 3 &trade;</p>
           </div>
           <div class="col d-flex flex-column align-items-center hover-opacity">
             <img class="accessories pb-3" src="img/remote-thumb.png" alt="">
-            <p class="fs-6 text-center">Telecomando Medie</p>
+            <p class="fs-6 text-center d-none d-md-inline-block">Telecomando Medie</p>
           </div>
           <div class="col d-flex flex-column align-items-center hover-opacity">
             <img class="accessories pb-3" src="img/camera-thumb.jpg" alt="">
-            <p class="fs-6 text-center">Telecamera HD</p>
+            <p class="fs-6 text-center d-none d-md-inline-block">Telecamera HD</p>
           </div>
         </div>
       </div>
@@ -238,8 +238,11 @@
     <!-- nuove uscite -->
     <section id="nuove-uscite" class="pt-5 pb-5 debug">
       <div class="container debug">
-        <div class="row debug">
-          <div class="col debug">a</div>
+        <div class="row">
+          <div class="col">
+            <h3 class="text-white fs-2">Nuove uscite</h3>
+            <p class="text-white fs-4">Giochi incredibili per PS4 e PS5 disponibili ora</p>
+          </div>
         </div>
         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 debug">
           <div class="col debug">a</div>
