section "nuove uscite" stilizzato

--- a/index.html
+++ b/index.html
@@ -236,27 +236,63 @@
     <!-- /it takes two -->
 
     <!-- nuove uscite -->
-    <section id="nuove-uscite" class="pt-5 pb-5 debug">
-      <div class="container debug">
+    <section id="nuove-uscite" class="pt-4 pb-3">
+      <div class="container">
         <div class="row">
           <div class="col">
             <h3 class="text-white fs-2">Nuove uscite</h3>
             <p class="text-white fs-4">Giochi incredibili per PS4 e PS5 disponibili ora</p>
           </div>
         </div>
-        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 debug">
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
-          <div class="col debug">a</div>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
+          <div class="col">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+          </div>
+          <div class="col">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+            <p class="text-white pt-1 pb-5">Crash Bandicoot 4: it's About Time</p>
+          </div>
         </div>
       </div>
     </section>
