section "playstation4", "playstationplus" e "sconti" stilizzate

--- a/index.html
+++ b/index.html
@@ -299,18 +299,32 @@
     <!-- /nuove uscite -->
 
     <!-- PLAYSTATION4 -->
-    <section id="playstation4">
-      <div class="container-fluid">
-        <div class="row debug">
-          <div class="col d-flex flex-column align-items-center debug">
-            <span class="blue">PLAY HAS NO LIMITS</span>
-            <h1 class="pb-2">Ecco la PlayStation 5</h1>
-            <p class="p-description">Tuffati in nuove possiblità di gioco compleatamente inaspettate</p>
+    <section id="playstation4" class="pt-5">
+      <div class="container">
+        <div class="row pt-3">
+          <div class="col d-flex flex-column align-items-center">
+            <h1 class="pb-2 position-relative">Esplora PlayStation<span class="r-mark"></span> 4</h1>
+            <p class="p-description text-center">Giochi incredibili e intrattenimento senza fine.<br>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
           </div>
-          <div class="row row-cols-1 row-cols-md-3 pb-5 debug">
-            <div class="col debug">a</div>
-            <div class="col debug">b</div>
-            <div class="col debug">c</div>
+          <div class="row row-cols-1 row-cols-md-3 pt-5 pb-5">
+            <div class="col pb-5">
+              <img src="img/ps4-slim-homepage-image-block.jpg" alt="">
+              <h1 class="pt-3 pb-2">Playstation 4</h1>
+              <p class="p-description">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+              <button type="button" class="btn btn-primary em-ps-button">Scopri di più</button>
+            </div>
+            <div class="col pb-5">
+              <img src="img/double11-202010-tw-psvr.jpg" alt="">
+              <h1 class="pt-3 pb-2">Playstation VR</h1>
+              <p class="p-description">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+              <button type="button" class="btn btn-primary em-ps-button">Scopri di più</button>
+            </div>
+            <div class="col pb-5">
+              <img src="img/dualshock-4-listing-thumb.jpg" alt="">
+              <h1 class="pt-3 pb-2">Accessori</h1>
+              <p class="p-description">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+              <button type="button" class="btn btn-primary em-ps-button">Scopri di più</button>
+            </div>
           </div>
         </div>
       </div>
@@ -318,29 +332,40 @@
     <!-- PLAYSTATION4 -->
 
     <!-- playstation plus -->
-    <section id="playstationplus" class="pt-5 pb-5 debug">
-      <div class="container debug">
-        <div class="row row-cols-1 row-cols-md-2 debug">
-          <div class="col debug">a</div>
-          <div class="col d-none d-md-flex debug">b</div>
+    <section id="playstationplus" class="">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col d-flex flex-column justify-content-center" id="left-side">
+            <img class="pb-4" src="img/ps-plus-logo.png" alt="">
+            <p class="pb-2">Migliora la tua esperienza Playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+            <button type="button" class="em-ps-button fw-bolder">Esplora PlayStation Plus</button>
+          </div>
+          <div class="col d-none d-md-flex" id="right-side">
+            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+          </div>
         </div>
       </div>
     </section>
     <!-- playstation plus -->
     
     <!-- sconti-->
-    <section id="sconti">
-      <div class="container-fluid">
-        <div class="row debug">
-          <div class="col d-flex flex-column align-items-center debug">
-            <span class="blue">PLAY HAS NO LIMITS</span>
-            <h1 class="pb-2">Ecco la PlayStation 5</h1>
-            <p class="p-description">Tuffati in nuove possiblità di gioco compleatamente inaspettate</p>
+    <section id="sconti" class="pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col d-flex flex-column align-items-center pt-5">
+            <h1 class="pb-2">Nuovi sconti sul PlayStation Store</h1>
+            <p class="p-description pb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
           </div>
-          <div class="row row-cols-1 row-cols-md-3 pb-5 debug">
-            <div class="col debug">a</div>
-            <div class="col debug">b</div>
-            <div class="col debug">c</div>
+          <div class="row row-cols-1 row-cols-md-3 pe-0">
+            <div class="col">
+              <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+            </div>
+            <div class="col">
+              <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+            </div>
+            <div class="col">
+              <img src="img/playstation-store-free-to-play-spotlight.png" alt="">
+            </div>
           </div>
         </div>
       </div>
