section playstation-now stilizzata

--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
     <section id="playstationplus" class="">
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2">
-          <div class="col d-flex flex-column justify-content-center" id="left-side">
+          <div class="col d-flex flex-column justify-content-center left-side">
             <img class="pb-4" src="img/ps-plus-logo.png" alt="">
             <p class="pb-2">Migliora la tua esperienza Playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
             <button type="button" class="em-ps-button fw-bolder">Esplora PlayStation Plus</button>
           </div>
-          <div class="col d-none d-md-flex" id="right-side">
+          <div class="col d-none d-md-flex right-side">
             <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
           </div>
         </div>
@@ -357,13 +357,13 @@
             <p class="p-description pb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
           </div>
           <div class="row row-cols-1 row-cols-md-3 pe-0">
-            <div class="col">
+            <div class="col em-col">
               <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
             </div>
-            <div class="col">
+            <div class="col em-col">
               <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
             </div>
-            <div class="col">
+            <div class="col em-col">
               <img src="img/playstation-store-free-to-play-spotlight.png" alt="">
             </div>
           </div>
@@ -374,11 +374,17 @@
 
 
     <!-- playstation now -->
-    <section id="playstation-now" class="pt-5 pb-5 debug">
-      <div class="container debug">
-        <div class="row row-cols-1 row-cols-md-2 debug">
-          <div class="col debug">a</div>
-          <div class="col d-none d-md-flex debug">b</div>
+    <section id="playstation-now" class="">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col d-flex flex-column justify-content-center left-side">
+            <img class="pb-4" src="img/ps-now-logo-two-column.png" alt="">
+            <p class="pb-2 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+            <button type="button" class="btn btn-light em-ps-button">Esplora PlayStation Now</button>
+          </div>
+          <div class="col d-none d-md-flex right-side">
+            <img src="img/ps-now-april-featured-image-block.png" alt="">
+          </div>
         </div>
       </div>
     </section>
