section social stilizzata

--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
     <!-- playstation plus -->
     
     <!-- sconti-->
-    <section id="sconti" class="pb-5">
+    <section id="sconti" class="pt-5 pb-5">
       <div class="container">
         <div class="row">
-          <div class="col d-flex flex-column align-items-center pt-5">
+          <div class="col d-flex flex-column align-items-center pt-4">
             <h1 class="pb-2">Nuovi sconti sul PlayStation Store</h1>
             <p class="p-description pb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
           </div>
@@ -392,15 +392,25 @@
     
 
     <!-- social -->
-    <section id="social" class="pt-5 pb-5 debug">
-      <div class="em-container debug">
-        <div class="container-fluid debug">
-          <div class="row">a</div>
+    <section id="social" class="pt-5 pb-5">
+      <div class="em-container">
+        <div class="container-fluid">
+          <div class="row pt-4 pb-5">
+            <h3 class="fs-2 text-center">Seguici sui social media</h3>
+          </div>
           <div class="row row-cols-2 row-cols-sm-4">
-            <div class="col debug">a</div>
-            <div class="col debug">b</div>
-            <div class="col debug">c</div>
-            <div class="col debug">e</div>
+            <div class="col d-flex justify-content-center em-col">
+              <img src="img/twitter.jpg" alt="">
+            </div>
+            <div class="col d-flex justify-content-center em-col">
+              <img src="img/facebook.jpg" alt="">
+            </div>
+            <div class="col d-flex justify-content-center em-col">
+              <img src="img/instagram.jpg" alt="">
+            </div>
+            <div class="col d-flex justify-content-center em-col">
+              <img src="img/youtube.png" alt="">
+            </div>
           </div>
         </div>
       </div>
