--- a/index.html
+++ b/index.html
@@ -398,18 +398,18 @@
           <div class="row pt-4 pb-5">
             <h3 class="fs-2 text-center">Seguici sui social media</h3>
           </div>
-          <div class="row row-cols-2 row-cols-sm-4">
+          <div class="row row-cols-2 row-cols-sm-4 pb-4">
             <div class="col d-flex justify-content-center em-col">
-              <img src="img/twitter.jpg" alt="">
+              <a href="#"><img src="img/twitter.jpg" alt=""></a>
             </div>
             <div class="col d-flex justify-content-center em-col">
-              <img src="img/facebook.jpg" alt="">
+              <a href="#"><img src="img/facebook.jpg" alt=""></a>
             </div>
             <div class="col d-flex justify-content-center em-col">
-              <img src="img/instagram.jpg" alt="">
+              <a href="#"><img src="img/instagram.jpg" alt=""></a>
             </div>
             <div class="col d-flex justify-content-center em-col">
-              <img src="img/youtube.png" alt="">
+              <a href="#"><img src="img/youtube.png" alt=""></a>
             </div>
           </div>
         </div>
@@ -419,21 +419,46 @@
   </main>
 
   <footer>
-    <section id="copyright" class="pt-5 pb-5 debug">
-      <div class="row row-cols-1 row-cols-lg-2 pb-5 debug">
-        <div class="col debug">a</div>
-        <div class="col debug">
-          <div class="container debug">
-            <div class="row row-cols-1 row-cols-md-3 debug">
-              <div class="col debug">link1</div>
-              <div class="col debug">link1</div>
-              <div class="col debug">link1</div>
-            </div>
+    <section id="copyright" class="pt-5 pb-5">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-lg-2">
+          <div class="col pb-5">
+            <img class="ps-footer-logo pb-4" src="img/ps-footer.svg" alt=""> <br>
+            <img class="globe-footer pe-2" src="img/language-globe.svg" alt="">
+            <span class="text-white">Country / Region: Italy</span>
+          </div>
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col d-flex flex-column ps-4 pb-2">
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+          </div>
+          <div class="col d-flex flex-column ps-4 pb-2">
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+          </div>
+          <div class="col d-flex flex-column ps-4 pb-2">
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
+            <a class="pb-2" href="#"><span class="text-white">Link footer n</span></a>
           </div>
         </div>
+        </div>
       </div>
-      <div class="row debug">
-        <div class="col debug">c</div>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-lg-2">
+          <div class="col">
+            <img class="sie-logo-footer" src="img/sie-logo.svg" alt="">
+            <p class="text-white pt-2">Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <span class="text-decoration-underline">Maggiori info</span></p>
+          </div>
+        </div>
       </div>
     </section>
   </footer>
