[header] sostituiti tag i delle chevron con gli svg dati con la consegna (inseriti in after) e inseriti gli hover

--- a/index.html
+++ b/index.html
@@ -50,37 +50,31 @@
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Giochi</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Hardware</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Servizi</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Novità</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Fai acquisti</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
               <li class="pe-4">
                 <a class="d-flex align-items-center" href="#">
                   <span>Supporto</span>
-                  <i class="fa-solid fa-chevron-down ps-2"></i>
                 </a>
               </li>
             </ul>
@@ -95,7 +89,6 @@
               <li class="pe-4">
                 <a href="#">
                   <span>My Playstation</span>
-                  <i class="fa-solid fa-chevron-down ps-1"></i>
                 </a>
               </li>
               <li class="pe-4">
@@ -105,7 +98,7 @@
               </li>
               <li class="pe-4">
                 <a href="#">
-                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <img class="lens" src="img/lens.svg" alt="">
                 </a>
               </li>
             </ul>
