--- a/index.html
+++ b/index.html
@@ -135,25 +135,25 @@
 
   <main>
     <!-- CAROUSEL -->
-    <section id="carousel" class="pt-5 pb-5">
-      <div class="container">
+    <section id="carousel" class="">
+      <div class="container em-container-header d-flex align-items-center">
         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
-          <div class="col em-col">
+          <div class="col d-flex em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>      
         </div>
