corrette immagini sotto header

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <main>
     <!-- CAROUSEL -->
-    <section id="carousel" class="">
+    <section id="carousel" class="pt-5 pb-4">
       <div class="container em-container-header d-flex align-items-center">
         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
           <div class="col d-flex em-col">
