aggiunto bordo blu (classe active) per le immagini sotto il jumbotron

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="container em-container-header d-flex align-items-center">
         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
           <div class="col d-flex em-col">
-            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <img class="active" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
           <div class="col d-flex em-col">
             <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
